Invio messaggio con tasto invio

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                         <div class="emoji"><i class="far fa-laugh"></i></div>
                         <input type="text" class="message-field-text">
                         <div class="send-rec enter-send">
-                            <i class="fas fa-microphone active"></i>
-                            <i class="fas fa-paper-plane"></i>
+                            <i class="fas fa-microphone rec-audio-btn active"></i>
+                            <i class="fas fa-paper-plane send-message-btn"></i>
                         </div>
                     </div>
                 </div>
