Disabilitato invio di messaggi vuoti

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="message-bar">
                         <div class="emoji"><i class="far fa-laugh"></i></div>
                         <input type="text" class="message-field-text">
-                        <div class="send-rec enter-send">
+                        <div class="send-btn-box">
                             <i class="fas fa-microphone rec-audio-btn active"></i>
                             <i class="fas fa-paper-plane send-message-btn"></i>
                         </div>
