--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         <input class="search-contacts" type="text" placeholder="Cerca un contatto">
                     </div>
                     <div class="contacts-list-box">
-                        <div class="contact">
+                        <div data-codice-utente="01" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ddcc6f0bf2b05324fa82d324157f301e.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ddcc6f0bf2b05324fa82d324157f301e.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Simone A.</div>
@@ -51,9 +51,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact active">
+                        <div data-codice-utente="02" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/68f39002806a55fe2ab9a06462fbc157.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/68f39002806a55fe2ab9a06462fbc157.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Andrea P.</div>
@@ -61,9 +61,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact">
+                        <div data-codice-utente="03" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/78bb71e25c8edadd73d8039f15b5d1a7.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/78bb71e25c8edadd73d8039f15b5d1a7.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Susanna F.</div>
@@ -71,9 +71,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact">
+                        <div data-codice-utente="04" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/813964efba7024935850f09521df2e74.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/813964efba7024935850f09521df2e74.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Nico M.</div>
@@ -81,9 +81,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact">
+                        <div data-codice-utente="05" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/2e0cb1ad7256983f7cbe7f0e25c455da.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/2e0cb1ad7256983f7cbe7f0e25c455da.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Alice Z.</div>
@@ -91,9 +91,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact">
+                        <div data-codice-utente="06" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ff2e8e792a8675444bef257bb7aac500.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ff2e8e792a8675444bef257bb7aac500.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Marco R.</div>
@@ -101,29 +101,9 @@
                             </div>
                             <div class="time">16.43</div>
                         </div>
-                        <div class="contact">
+                        <div data-codice-utente="07" class="contact">
                             <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/15b3029bf85c44b1050c3a219f165768.svg'/>
-                            </div>
-                            <div class="contact-text">
-                                <div class="contact-name">Valentina D.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque doloribus consequuntur odio, soluta nam laborum dolorem laboriosam iste quisquam beatae harum error ratione debitis minima distinctio possimus molestias quis suscipit.</div>
-                            </div>
-                            <div class="time">16.43</div>
-                        </div>
-                        <div class="contact">
-                            <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/5145cbc289ff29dd354cd02909ccb0fe.svg'/>
-                            </div>
-                            <div class="contact-text">
-                                <div class="contact-name">Luca W.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi similique ad mollitia itaque, harum possimus quasi. Minus non asperiores accusantium, illo distinctio mollitia quis veniam laboriosam provident saepe ipsum!</div>
-                            </div>
-                            <div class="time">16.43</div>
-                        </div>
-                        <div class="contact">
-                            <div class="avatar">
-                                <img class= "avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ab13393c0bdffb03d4fa6f97e838f094.svg'/>
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/ab13393c0bdffb03d4fa6f97e838f094.svg'/>
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Alessia R.</div>
@@ -131,12 +111,41 @@
                             </div>
                             <div class="time">16:43</div>
                         </div>
-
+                        <div data-codice-utente="08" class="contact">
+                            <div class="avatar">
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/15b3029bf85c44b1050c3a219f165768.svg'/>
+                            </div>
+                            <div class="contact-text">
+                                <div class="contact-name">Valentina D.</div>
+                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque doloribus consequuntur odio, soluta nam laborum dolorem laboriosam iste quisquam beatae harum error ratione debitis minima distinctio possimus molestias quis suscipit.</div>
+                            </div>
+                            <div class="time">16.43</div>
+                        </div>
+                        <div data-codice-utente="09" class="contact">
+                            <div class="avatar">
+                                <img class="avatar-img" src='https://avatars.dicebear.com/v2/avataaars/5145cbc289ff29dd354cd02909ccb0fe.svg'/>
+                            </div>
+                            <div class="contact-text">
+                                <div class="contact-name">Luca W.</div>
+                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi similique ad mollitia itaque, harum possimus quasi. Minus non asperiores accusantium, illo distinctio mollitia quis veniam laboriosam provident saepe ipsum!</div>
+                            </div>
+                            <div class="time">16.43</div>
+                        </div>
                     </div>
                 </div>
                 <div class="right-column">
                     <div class="open-contact-bar">
-                        <div class="open-contact-bar-left">
+
+                        <div data-codice-utente="01" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="02" class="open-contact-bar-left">
                             <div class="avatar open-avatar">
                                 <img src="https://avatars.dicebear.com/v2/avataaars/68f39002806a55fe2ab9a06462fbc157.svg" alt="">
                             </div>
@@ -145,6 +154,71 @@
                                 <div class="last-access">Ultimo accesso oggi alle 15.18</div>
                             </div>
                         </div>
+                        <div data-codice-utente="03" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+
+                            </div>
+                        </div>
+                        <div data-codice-utente="04" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="05" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="06" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="07" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="08" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+                        <div data-codice-utente="09" class="open-contact-bar-left">
+                            <div class="avatar open-avatar">
+                                <img src="" alt="">
+                            </div>
+                            <div class="info-open-contact">
+                                <div class="open-name"></div>
+                                <div class="last-access"></div>
+                            </div>
+                        </div>
+
                         <div class="open-settings open-contact-bar-right">
                             <i class="fas fa-search"></i>
                             <i class="fas fa-paperclip"></i>
@@ -153,7 +227,7 @@
                     </div>
 
                     <div class="main-section">
-                        <div class="messages-box">
+                        <div data-codice-utente="01" class="messages-box">
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Ciao come stai?</div>
@@ -197,15 +271,54 @@
                             </div>
 
                         </div>
+                        <div data-codice-utente="02" class="messages-box">
+                            <div class="message-sent">
+                                <div class="message-sent-bubble">
+                                    <div class="message-content">Eilà</div>
+                                    <div class="message-time">Ieri, 11.47</div>
+                                </div>
+                            </div>
+                            <div class="message-sent">
+                                <div class="message-sent-bubble">
+                                    <div class="message-content">Mi mandi la tua email che ti giro il file?</div>
+                                    <div class="message-time">Ieri, 11.47</div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div data-codice-utente="03" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="04" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="05" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="06" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="07" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="08" class="messages-box">
+
+                        </div>
+                        <div data-codice-utente="09" class="messages-box">
+
+                        </div>
                             <img class="bg-image" src="https://images.pexels.com/photos/1680140/pexels-photo-1680140.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="">
                         </div>
 
                     <div class="message-bar">
-                        <div class="emoji"><i class="far fa-laugh"></i></div>
-                        <input type="text" class="message-field-text">
-                        <div class="send-btn-box">
-                            <i class="fas fa-microphone rec-audio-btn active"></i>
-                            <i class="fas fa-paper-plane send-message-btn"></i>
+                        <div class="message-bar-content">
+                            <div class="emoji"><i class="far fa-laugh"></i></div>
+                            <input type="text" class="message-field-text">
+                            <div class="send-btn-box">
+                                <i class="fas fa-microphone rec-audio-btn active"></i>
+                                <i class="fas fa-paper-plane send-message-btn"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
