Corretti problemi aggiunta messaggi e scroll

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                         </div>
                         <div data-codice-utente="02" class="open-contact-bar-left">
                             <div class="avatar open-avatar">
-                                <img src="https://avatars.dicebear.com/v2/avataaars/68f39002806a55fe2ab9a06462fbc157.svg" alt="">
+                                <img src="" alt="">
                             </div>
                             <div class="info-open-contact">
-                                <div class="open-name">Andrea P.</div>
+                                <div class="open-name"></div>
                                 <div class="last-access">Ultimo accesso oggi alle 15.18</div>
                             </div>
                         </div>
