Varie aggiunte e correzioni
Grafica di benvenuto, correzione errori, interfaccia completamente dinamica (ultimo messaggio, orari accesso,...), ripsoste random, corretto scroll

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/25aedb670a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -46,10 +47,10 @@
                             <div class="contact-text">
                                 <div class="contact-name">Simone A.</div>
                                 <div class="message-preview">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus odio repudiandae qui dolor libero fugit cumque sit in ratione vel, quod consequuntur blanditiis odit eligendi laborum illum, numquam dolore laudantium.
+                                    Vabbeeeee ma io ti invidio troppooooooooo!!!!
                                 </div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time">Ieri</div>
                         </div>
                         <div data-codice-utente="02" class="contact">
                             <div class="avatar">
@@ -57,9 +58,11 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Andrea P.</div>
-                                <div class="message-preview">Vabbeeeee ma io ti invidio troppooooooooo!!!!</div>
+                                <div class="message-preview">
+                                    Eccola qui, manda pure a: yaymaimai@email.me
+                                </div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time">Ieri</div>
                         </div>
                         <div data-codice-utente="03" class="contact">
                             <div class="avatar">
@@ -67,9 +70,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Susanna F.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat aperiam quaerat, perferendis, magnam eaque cumque aspernatur ipsa ab dolorem, porro doloribus incidunt expedita architecto assumenda, vero est ea impedit accusamus!</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="04" class="contact">
                             <div class="avatar">
@@ -77,9 +80,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Nico M.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla excepturi unde earum voluptate, doloremque expedita vero eos, similique non facilis! Facilis porro fugiat eligendi numquam reiciendis voluptas enim animi delectus.</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="05" class="contact">
                             <div class="avatar">
@@ -87,9 +90,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Alice Z.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum quo magni quos, perspiciatis officia, reprehenderit qui tempora. Optio accusamus adipisci sunt? Sunt consequuntur dolorum iste quisquam dignissimos nesciunt velit. Fugiat.</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="06" class="contact">
                             <div class="avatar">
@@ -97,9 +100,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Marco R.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad molestiae debitis, commodi animi ipsa pariatur at mollitia sapiente vel explicabo vero delectus asperiores numquam amet repudiandae, ut aperiam ab recusandae.</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="07" class="contact">
                             <div class="avatar">
@@ -107,9 +110,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Alessia R.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa eum porro consequatur hic dignissimos id voluptatem maxime suscipit nobis, aut, quam maiores! Ipsa, quam perferendis, quas animi totam adipisci accusamus.</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16:43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="08" class="contact">
                             <div class="avatar">
@@ -117,9 +120,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Valentina D.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque doloribus consequuntur odio, soluta nam laborum dolorem laboriosam iste quisquam beatae harum error ratione debitis minima distinctio possimus molestias quis suscipit.</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                         <div data-codice-utente="09" class="contact">
                             <div class="avatar">
@@ -127,9 +130,9 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-name">Luca W.</div>
-                                <div class="message-preview">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi similique ad mollitia itaque, harum possimus quasi. Minus non asperiores accusantium, illo distinctio mollitia quis veniam laboriosam provident saepe ipsum!</div>
+                                <div class="message-preview"></div>
                             </div>
-                            <div class="time">16.43</div>
+                            <div class="time"></div>
                         </div>
                     </div>
                 </div>
@@ -142,7 +145,7 @@
                             </div>
                             <div class="info-open-contact">
                                 <div class="open-name"></div>
-                                <div class="last-access"></div>
+                                <div class="last-access">Ultimo accesso ieri alle ore 15:18</div>
                             </div>
                         </div>
                         <div data-codice-utente="02" class="open-contact-bar-left">
@@ -151,7 +154,7 @@
                             </div>
                             <div class="info-open-contact">
                                 <div class="open-name"></div>
-                                <div class="last-access">Ultimo accesso oggi alle 15.18</div>
+                                <div class="last-access">Ultimo accesso ieri alle ore 12:19</div>
                             </div>
                         </div>
                         <div data-codice-utente="03" class="open-contact-bar-left">
@@ -227,29 +230,33 @@
                     </div>
 
                     <div class="main-section">
+                        <div class="intro-logo">
+                            <h1>Boolzapp</h1>
+                            <p>Clicca su un contatto per iniziare la conversazione</p>
+                        </div>
                         <div data-codice-utente="01" class="messages-box">
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Ciao come stai?</div>
-                                    <div class="message-time">Ieri, 11.47</div>
+                                    <div class="message-time">Ieri, 11:47</div>
                                 </div>
                             </div>
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Sei partito?</div>
-                                    <div class="message-time">Ieri, 11.47</div>
+                                    <div class="message-time">Ieri, 11:47</div>
                                 </div>
                             </div>
                             <div class="message-received">
                                 <div class="message-received-bubble">
                                     <div class="message-content">Tutto bene, no parto domani!</div>
-                                    <div class="message-time">Ieri, 11.49</div>
+                                    <div class="message-time">Ieri, 11:49</div>
                                 </div>
                             </div>
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Ah ok! Pensavo che il grande giorno fosse oggi! Mi sono confuso. Allora fai buon viaggio, ci vediamo appena torni... e portami un regalino eh! :)</div>
-                                    <div class="message-time">Ieri, 11.51</div>
+                                    <div class="message-time">Ieri, 11:51</div>
                                 </div>
                             </div>
                             <div class="message-received">
@@ -258,15 +265,15 @@
                                     <div class="message-content">
                                         <img src="https://images.pexels.com/photos/1450354/pexels-photo-1450354.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                                     </div>
-                                    <div class="message-content">Siamo atterrati qui con questo aereo!!!</div>
-                                    <div class="message-time">Oggi, 15.18</div>
+                                    <div class="message-content">Atterreremo qui con questo aereo!!!</div>
+                                    <div class="message-time">Ieri, 15:18</div>
                                 </div>
 
                             </div>
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Vabbeeeee ma io ti invidio troppooooooooo!!!!</div>
-                                    <div class="message-time">15.21</div>
+                                    <div class="message-time">Ieri, 15:21</div>
                                 </div>
                             </div>
 
@@ -275,16 +282,26 @@
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
                                     <div class="message-content">Eilà</div>
-                                    <div class="message-time">Ieri, 11.47</div>
+                                    <div class="message-time">Ieri, 11:46</div>
                                 </div>
                             </div>
                             <div class="message-sent">
                                 <div class="message-sent-bubble">
-                                    <div class="message-content">Mi mandi la tua email che ti giro il file?</div>
-                                    <div class="message-time">Ieri, 11.47</div>
+                                    <div class="message-content">Mi ricordi la tua email che ti giro il file? Thx :)</div>
+                                    <div class="message-time">Ieri, 11:47</div>
                                 </div>
                             </div>
+                            <div class="message-received">
+                                <div class="message-received-bubble">
+                                    <div class="message-content">
+                                        Eccola qui, manda pure a: yaymaimai@email.me
+                                    </div>
+                                    <div class="message-time">Ieri, 12:19</div>
+                                </div>
+
+                            </div>
                         </div>
+
 
 
                         <div data-codice-utente="03" class="messages-box">
