Aggiunta Dark Mode
only4fun

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
                             <img class="avatar-img my-avatar-img" src="https://avatars.dicebear.com/v2/avataaars/569d8f1b044facff184ee4c6a89c0321.svg" alt="">
                         </div>
                         <div class="settings">
-                            <i class="fas fa-circle-notch"></i>
+                            <div class="toggle-light-box">
+                                <span class="light">Light Mode</span>
+                                <i class="fas fa-adjust dark-mode-toggle"></i>
+                            </div>
+                            <div class="toggle-dark-box">
+                                <span class="dark">Dark Mode</span>
+                                <i class="fas fa-adjust dark-mode-toggle"></i>
+                            </div>
                             <i class="fas fa-comment-alt"></i>
                             <i class="fas fa-ellipsis-v"></i>
                         </div>
